crates/atlas-runtime/tests/snapshots/parser_tests__logical_or.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Binary:
            op: Or
            left:
              Literal:
                - Bool: true
                - start: 0
                  end: 4
            right:
              Literal:
                - Bool: false
                - start: 8
                  end: 13
            span:
              start: 0
              end: 13
        span:
          start: 0
          end: 14
