crates/atlas-runtime/tests/snapshots/parser_tests__multiplication.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Binary:
            op: Mul
            left:
              Literal:
                - Number: 3
                - start: 0
                  end: 1
            right:
              Literal:
                - Number: 4
                - start: 4
                  end: 5
            span:
              start: 0
              end: 5
        span:
          start: 0
          end: 6
