crates/atlas-runtime/tests/snapshots/parser_tests__negation.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Unary:
            op: Negate
            expr:
              Literal:
                - Number: 5
                - start: 1
                  end: 2
            span:
              start: 0
              end: 2
        span:
          start: 0
          end: 3
