crates/atlas-runtime/tests/snapshots/parser_tests__null_literal.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Literal:
            - "Null"
            - start: 0
              end: 4
        span:
          start: 0
          end: 5
