crates/atlas-runtime/tests/snapshots/parser_tests__number_literal.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Literal:
            - Number: 42
            - start: 0
              end: 2
        span:
          start: 0
          end: 3
