crates/atlas-runtime/tests/snapshots/parser_tests__operator_precedence_comparison_over_logical.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Binary:
            op: And
            left:
              Binary:
                op: Lt
                left:
                  Literal:
                    - Number: 1
                    - start: 0
                      end: 1
                right:
                  Literal:
                    - Number: 2
                    - start: 4
                      end: 5
                span:
                  start: 0
                  end: 5
            right:
              Binary:
                op: Gt
                left:
                  Literal:
                    - Number: 3
                    - start: 9
                      end: 10
                right:
                  Literal:
                    - Number: 4
                    - start: 13
                      end: 14
                span:
                  start: 9
                  end: 14
            span:
              start: 0
              end: 14
        span:
          start: 0
          end: 15
