crates/atlas-runtime/tests/snapshots/parser_tests__operator_precedence_multiplication_over_addition.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Binary:
            op: Add
            left:
              Literal:
                - Number: 1
                - start: 0
                  end: 1
            right:
              Binary:
                op: Mul
                left:
                  Literal:
                    - Number: 2
                    - start: 4
                      end: 5
                right:
                  Literal:
                    - Number: 3
                    - start: 8
                      end: 9
                span:
                  start: 4
                  end: 9
            span:
              start: 0
              end: 9
        span:
          start: 0
          end: 10
