crates/atlas-runtime/tests/snapshots/parser_tests__parse_block_in_if.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      If:
        cond:
          Literal:
            - Bool: true
            - start: 4
              end: 8
        then_block:
          statements:
            - VarDecl:
                mutable: false
                name:
                  name: x
                  span:
                    start: 16
                    end: 17
                type_ref: ~
                init:
                  Literal:
                    - Number: 1
                    - start: 20
                      end: 21
                span:
                  start: 12
                  end: 22
            - VarDecl:
                mutable: false
                name:
                  name: y
                  span:
                    start: 27
                    end: 28
                type_ref: ~
                init:
                  Literal:
                    - Number: 2
                    - start: 31
                      end: 32
                span:
                  start: 23
                  end: 33
          span:
            start: 10
            end: 35
        else_block: ~
        span:
          start: 0
          end: 35
